<resources>
    <string name="app_name">Desafio</string>
    <string name="openbooks_button">Livros</string>
    <string name="open_houses_button">Casas</string>
    <string name="menu_books_label">Livros</string>
    <string name="menu_characters_label">Personagens</string>
    <string name="isbn">Isbn:</string>
    <string name="pages">Páginas:</string>
    <string name="release">Lançamento:</string>
    <string name="pov">Personagens POV</string>
    <string name="all_characters">Todos os personagens</string>
    <string name="isbn_placeholder">ISBN: %1$s</string>
    <string name="pages_placeholder">Páginas: %1$s</string>
    <string name="release_date_placeholder">Lançamento: %1$s</string>
    <string name="overlord">Senhor da Casa</string>
    <string name="heir">Herdeiro da casa</string>
    <string name="name_not_found">Nome desconhecido!</string>
    <string name="birth_not_found">Data de nascimento não encontrada</string>
    <string name="titles_not_found">Não possui títulos!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search_button_label">Search</string>
    <string name="characters_not_found">Não foram encontrados personagens</string>
    <string name="books_not_found">Não foi possível carregar os livros, verifique a conexão e tente novamente!</string>
    <string name="houses_not_found">Não foi possível carregar as Casas, verifique a conexão e tente novamente!</string>
</resources>