<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SpecificBookActivity">

    <TextView
        android:id="@+id/tv_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_book_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isbn"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_book_pages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_isbn" />

    <TextView
        android:id="@+id/tv_book_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_pages" />

    <Button
        android:id="@+id/btn_characters_pov"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pov"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_release_date" />

    <Button
        android:id="@+id/btn_all_characters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/all_characters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_characters_pov" />
</androidx.constraintlayout.widget.ConstraintLayout>